<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/card_movie"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_movie"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.217"
            tools:layout_editor_absoluteX="141dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:layout_marginTop="8dp"
                android:text="@string/title_dummy"
                style="@style/TextValue.TITLE"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_release"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:text="@string/release_dummy"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <RatingBar
                android:id="@+id/rb_rating_bar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="82dp"
                android:layout_height="17dp"
                app:layout_constraintStart_toStartOf="@id/tv_release"
                app:layout_constraintTop_toBottomOf="@+id/tv_release" />

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:text="@string/genre_dummy"
                style="@style/TextValue"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/rb_rating_bar"
                app:layout_constraintTop_toBottomOf="@+id/rb_rating_bar" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:text="@string/rate_dummy"
                style="@style/TextValue"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/tv_genre"
                app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

            <TextView
                android:id="@+id/tv_simple_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:text="@string/desc_dummy"
                android:textSize="12sp"
                android:maxLines="4"
                style="@style/TextValue"
                app:layout_constraintStart_toStartOf="@id/tv_rating"
                app:layout_constraintTop_toBottomOf="@+id/tv_rating" />


        </android.support.constraint.ConstraintLayout>

        <ImageView
            android:id="@+id/img_movie_poster"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/desc_image_poster"
            android:src="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.034"
            app:layout_constraintLeft_toLeftOf="@id/card_movie"
            app:layout_constraintStart_toStartOf="@+id/cl_movie"
            app:layout_constraintTop_toTopOf="@+id/cl_movie"
            app:layout_constraintVertical_bias="0.0" />

        <ProgressBar
            android:id="@+id/pb_load_image"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/img_movie_poster"
            app:layout_constraintEnd_toEndOf="@+id/img_movie_poster"
            app:layout_constraintStart_toStartOf="@+id/img_movie_poster"
            app:layout_constraintTop_toTopOf="@+id/img_movie_poster" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>